done the nav bar, but the active color when you hover over a link on mobile view doesn't work like desktop view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@
 }
 
 /*z index*/
-:root{
+:root {
     --z-back: -10;
     --z-normal: 1;
     --z-tooltip: 10;
@@ -44,22 +44,22 @@
 }
 
 /* Base */
-*,::before,::after{
+*, ::before, ::after {
     box-sizing:border-box;
 }
-html{
+html {
     scroll-behavior: smooth;
 }
-body{
+body {
     margin: var(--header-height) 0 0 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     color: var(--second-color);
 }
-h1,h2,p{
+h1, h2, p {
     margin: 0;
-}
-ul{
+} 
+ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -85,7 +85,7 @@ img{
 
 .section-title::after{
     position: absolute;
-    content: '';
+    content: "";
     width: 64px;
     height: 0.18rem;
     Left: 0;
@@ -102,53 +102,53 @@ img{
 .bg-grid{
     max-width: 1024px;
     display: grid;
-    grid-template-columns: 100px;
+    grid-template-columns: 100%;
     grid-column-gap: 2rem;
     width: calc(100% - 2rem);
     margin-left: var(--mb-2);
     margin-right: var(--mb-2);
 }
-.i-header{
-    width: 100px;
+.l-header{
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
     background-color: #fff;
-    box-shadow: 0 1px 4px rgba(146,161,176,.15);
+    box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
 }
 
 /*Nav*/
-.nav{
+.nav {
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: var(--font-semi);  
 }
-@media screen and (max-width: 768px){
-    .nav__menu{
+@media screen and (max-width: 767px) {
+    .nav__menu {
         position: fixed;
         top: var(--header-height);
-        right: 0;
+        right: -100%;
         width: 80%;
         height: 100%;
         padding: 2rem;
         background-color: var(--second-color);
-        transition: .5s;
+        transition: 0.5s;
     }
 }
-.nav__item{
+.nav__item {
     margin-bottom: var(--mb-4);
 }
-.nav__link{
+.nav__link {
     position: relative;
     color: #fff;
 }
-.nav__link:hover{
+.nav__link:hover {
     position: relative;
 }
-.nav__link:hover::after{
+.nav__link:hover::after {
     position: absolute;
     content: "";
     width: 100%;
@@ -157,17 +157,17 @@ img{
     top: 2rem;
     background-color: var(--first-color);
 }
-.nav__logo{
+.nav__logo {
     color: var(--second-color);
 }
-.nav__toggle{
+.nav__toggle {
     color: var(--second-color);
     font-size: 1.5rem;
     cursor: pointer;
 }
 
 /*Active Menu*/
-.active::after{
+.active-link::after {
     position: absolute;
     content: "";
     width: 100%;
