--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,7 +124,8 @@ img{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-weight: var(--font-semi);  
+  font-weight: var(--font-semi);
+  padding: 0% 1rem;  
 }
 @media screen and (max-width: 767px) {
     .nav__menu {
@@ -230,4 +231,20 @@ img{
 }
 .button:hover{
     box-shadow: 0 10px 36px rgba(0,0,0,.15);
+}
+
+/* ABOUT */
+.about__container{
+    row-gap: 2rem;
+    text-align: center;
+}
+.about__subtitle{
+    margin-bottom: var(--mb-2);
+}
+.about__img{
+    justify-self: center;
+}
+.about__img img{
+    width: 200px;
+    border-radius: .5rem;
 }
