--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -240,6 +240,10 @@ img{
 }
 .about__subtitle{
     margin-bottom: var(--mb-2);
+    padding: 1rem 2rem;
+}
+.about__text{
+    padding: 0 1rem;
 }
 .about__img{
     justify-self: center;
@@ -247,4 +251,70 @@ img{
 .about__img img{
     width: 200px;
     border-radius: .5rem;
+}
+
+/* SKILLS */
+.skills__container{
+    row-gap: 2rem;
+    text-align: center;
+}
+.skills__subtitle{
+    margin-bottom: var(--mb-2);
+}
+.skills__text{
+    margin-bottom: var(--mb-4);
+    padding: 0rem .5rem;
+}
+.skills__data{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    font-weight: var(--font-semi);
+    padding: .5rem 2rem;
+    margin-bottom: var(--mb-4);
+    border-radius: .5rem;
+    box-shadow: 0 4px 25px rgba(14,36,49,.15);
+}
+.skills__icon{
+    font-size: 2rem;
+    margin-right: var(--mb-2);
+    color: var(--first-color);
+}
+.skills__names{
+    display: flex;
+    align-items: center;
+}
+.skills__bar{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--first-color);
+    height: .25rem;
+    border-radius: .5rem;
+    z-index: var(--z-back);
+}
+.skills__html{
+    width: 80%;
+}
+.skills__css{
+    width: 75%;
+}
+.skills__js{
+    width: 60%;
+}
+.skills__php{
+    width: 65%;
+}
+.skills__flutter{
+    width: 55%;
+}
+.skills__rest{
+    width: 65%;
+}
+.skills__git{
+    width: 90%;
+}
+.skills__canva{
+    width: 65%;
 }
