second attempt to center the about image on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,7 @@
 }
 }
 
+
 /*margins*/
 :root{
     --mb-1: 0.5rem;
@@ -141,10 +142,15 @@ img{
         background-color: var(--second-color);
         transition: 0.5s;
     }
+    
+}
+
+@media (max-width: 375px) {
     .about__img{
-    justify-self: center;
+        justify-self: center;
 }
 }
+
 .nav__item {
     margin-bottom: var(--mb-4);
 }
